.kubernetes/general/services/gunicorn.yml
apiVersion: v1
kind: Service
metadata:
  name: gunicorn
spec:
  ports:
    - name: "8001"
      port: 8001
      targetPort: 8001
  selector:
    app: gunicorn
