.kubernetes/general/services/http.yml
apiVersion: v1
kind: Service
metadata:
  name: http 
spec: 
  type: NodePort
  ports:
  - name: http
    port: 80 
    protocol: TCP
    targetPort: 80
    nodePort: 31701
  selector:
    app: http
