.kubernetes/general/services/ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: managed-cert-ingress
  annotations:
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "false"
    cloud.google.com/backend-config: '{"default": "my-backendconfig"}' 
spec:
  defaultBackend:
    service:
      name: http 
      port:
        number: 80
